--- a/lienket/lienket.html
+++ b/lienket/lienket.html
@@ -28,7 +28,7 @@
     <b3>
         <img src="https://img5.thuthuatphanmem.vn/uploads/2021/08/25/anh-dai-dien-an-danh_085759839.jpg">
         <ul>
-            <a href="https://ahgksl.github.io/My-Profile/"target="_blank" title="facebook cá nhân">Nguyễn Tiến Cường</a>
+            <a href="https://ahgksl.github.io/profile/" target="_blank" title="facebook cá nhân">Nguyễn Tiến Cường</a>
         </ul>
     </b3>
     <b4>
